--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "api": "nodemon --inspect=127.0.0.1:9229 backend"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
