--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-status-bar": "~1.4.0",
