--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.69.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "simpler-state": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
